2005-01-10  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/PlaylistWindow.cs:
	
	A couple more cleanups first...

2005-01-10  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/PlaylistWindow.cs:
	
	Code cleanup. Getting ready for the great divide...

2005-01-10  Tamara Roberson  <foxxygirltamara@gmail.com>

	* data/glade/PlaylistWindow.glade:
	* src/Actions.cs:
	* src/PlaylistWindow.cs:
	
	Finished moving callbacks over to Actions. We actually ended up
	making PlaylistWindow *bigger* through all this, but hopefully
	it's cleaner. Sorry about the cut-and-paste error yesterday :-).

2005-01-09  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/AddWindow.cs:
	* src/AddWindowEntry.cs:
	* src/AddWindowList.cs:
	
	More unification of AddAlbumWindow and AddSongWindow.
	As a side effect, searching albums now also fakes speed.

2005-01-09  Jorn Baayen  <jbaayen@gnome.org>

	* src/Actions.cs:

	Arghl- somebody bound the ImportFolder action to the Remove
	action.

2005-01-09  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* configure.in:

	Release 0.8.0.

2005-01-09  Jorn Baayen  <jbaayen@gnome.org>

	* src/NotificationAreaIcon.cs:

	More comments back to where they belong.

2005-01-09  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:

	Move comment about prefixes back to above the prefixes string,
	where it belongs. 

	Tamara, comments giving translators info about how to translate
	the thing should stay above the string.

2005-01-09  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddWindowEntry.cs:

	Restore "<enter> activates default" behaviour.

2005-01-09  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverGetter.cs:

	Only add border to amazon pixbuf if we got one.

2005-01-09  Tamara Roberson  <foxxygirltamara@gmail.com>
	
	* src/Actions.cs:
	* src/Global.cs:
	* src/Makefile.am:
	* src/PlaylistWindow.cs:
	
	Split off Actions from PlaylistWindow.

2005-01-09  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs: